--- a/src/GroupDocs.Merger.Cloud.Sdk.Test/GroupDocs.Merger.Cloud.Sdk.Test.csproj
+++ b/src/GroupDocs.Merger.Cloud.Sdk.Test/GroupDocs.Merger.Cloud.Sdk.Test.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
